updated main doc to de-emphasize BCE

--- a/dynamic-docs.html
+++ b/dynamic-docs.html
@@ -173,9 +173,7 @@ hr {
 
 <p>This tutorial covers the basics of creating documents that combine code chunks, mathematical notation, and text. We&#39;ll cover R, Python and bash shell chunks in the context of documents written with LaTeX, Markdown, and Jupyter (formerly IPython Notebook). </p>
 
-<p>This tutorial was developed using a virtual machine developed here at Berkeley, the <a href="http://bce.berkeley.edu">Berkeley Common Environment (BCE)</a>. BCE is a virtual Linux machine - basically it is a Linux computer that you can run within your own computer, regardless of whether you are using Windows, Mac, or Linux. This provides a common environment so that things behave the same for all of us. You&#39;ll also need to run the commands in <em>bce.sh</em> to make sure all the necessary software for this tutorial is installed. You&#39;re welcome to try using BCE with this tutorial, but I should not that we haven&#39;t updated BCE recently and the VirtualBox software on which BCE will run can be a pain.</p>
-
-<p>If you&#39;d like to work on your own machine, you can, but you&#39;ll need to install the following:</p>
+<p>For this tutorial you&#39;ll need to install the following:</p>
 
 <ul>
 <li>a LaTeX installation such as MacTex (Mac) or MiKTeX (Windows).</li>
@@ -187,6 +185,8 @@ hr {
 <p>Department and university servers that you may have access to may also have some or all of this software already installed.</p>
 
 <p>This tutorial assumes you are able to use the UNIX command line; we provide a tutorial on the <a href="http://statistics.berkeley.edu/computing/training/tutorials">Basics of UNIX</a>. This tutorial also assumes basic familiarity with LaTeX; more details on LaTeX are available in our <a href="http://statistics.berkeley.edu/computing/training/tutorials">quick introduction to LaTeX tutorial</a>.</p>
+
+<p>This tutorial was developed using a virtual machine developed here at Berkeley, the <a href="http://bce.berkeley.edu">Berkeley Common Environment (BCE)</a>. BCE is a virtual Linux machine - basically it is a Linux computer that you can run within your own computer, regardless of whether you are using Windows, Mac, or Linux. This provides a common environment so that things behave the same for all of us. You&#39;ll also need to run the commands in <em>bce.sh</em> to make sure all the necessary software for this tutorial is installed. You&#39;re welcome to try using BCE with this tutorial, but we haven&#39;t updated BCE recently and the VirtualBox software on which BCE will run can be a pain.</p>
 
 <p>Materials for this tutorial, including the R markdown file that was used to create this document are available on Github at (<a href="https://github.com/berkeley-scf/tutorial-dynamic-docs">https://github.com/berkeley-scf/tutorial-dynamic-docs</a>).  You can download the files by doing a git clone from a terminal window on a UNIX-like machine, as follows:</p>
 
@@ -234,9 +234,7 @@ hr {
 
 <p>The Jupyter files have some similarities to <em>demo.Rmd</em> as both R Markdown and Jupyter rely on Markdown as the format for text input. However, they handle code chunks somewhat differently.</p>
 
-<p>Jupyter does not allow one to insert chunks from multiple languages in the same document, so here we have demo files for inserting R chunks (<em>demo-R.ipynb</em>), bash chunks (<em>demo-bash.ipynb</em>), and Python chunks (<em>demo-python.ipynb</em>). All include instructions for generating HTML output. </p>
-
-<p>To use the bash kernel in BCE or on your own machine, you will need to do some additional installation. In particular, in BCE please run the relevant commands in <em>bce.sh</em>.</p>
+<p>In the past Jupyter has not allowed one to insert chunks from multiple languages in the same document, so here we have demo files for inserting R chunks (<em>demo-R.ipynb</em>), bash chunks (<em>demo-bash.ipynb</em>), and Python chunks (<em>demo-python.ipynb</em>). All include instructions for generating HTML output. </p>
 
 </body>
 
